--- a/apiv1/templates/home.html
+++ b/apiv1/templates/home.html
@@ -8,3 +8,10 @@
 用户邮箱：{{ email }}
 </body>
 </html>
+
+<!--
+生成迁移脚本：python manage.py makemigrations
+同步数据库：python manage.py migrate
+
+创建超级用户：python manage.py createsuperuser
+-->
