--- a/apiv1/templates/home.html
+++ b/apiv1/templates/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>APP</title>
+    <title>用户邮箱</title>
 </head>
 <body>
 用户邮箱：{{ email }}
